bootstrap/terraform/core/gitea/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitea-ingress
  namespace: "${namespace}"
  annotations:
    cert-manager.io/cluster-issuer: "lab-ca-issuer"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/hsts: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: "${hostname}"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gitea-http
            port:
              number: 3000
  tls:
  - hosts:
    - "${hostname}"
    secretName: gitea-tls-secret
